# Meta-PyTorch

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  auto_detect.sh  debug_graders_extreme.py  debug_scoring.py  debug_serialization.py  demo-side-by-side.sh  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run-local.sh  stop-local.sh  tasks.py
elasticsearch-data-7/nodes/0/_state/: _12.cfe  _12.cfs  _12.si  _17.cfe  _17.cfs  _17.si  _1i.cfe  _1i.cfs  _1i.si  _1i_1.liv  _1q.cfe  _1q.cfs  _1q.si  _1r.cfe  _1r.cfs  _1r.si  node-0.st  segments_1u
elasticsearch-data-7/nodes/0/snapshot_cache/: segments_1
elasticsearch-data/_state/: _m.cfe  _m.cfs  _m.si  _m_1.liv  _o.cfe  _o.cfs  _o.si  _p.cfe  _p.cfs  _p.si  _p_1.liv  _q.cfe  _q.cfs  _q.si  node-0.st  segments_1a
elasticsearch-data/indices/1vlnaFH2QQqDFgVLsubnIA/0/_state/: retention-leases-2.st  state-0.st
elasticsearch-data/indices/1vlnaFH2QQqDFgVLsubnIA/0/index/: _0.cfe  _0.cfs  _0.si  (+4 more)
elasticsearch-data/indices/1vlnaFH2QQqDFgVLsubnIA/_state/: state-6.st
elasticsearch-data/indices/6rjpBGwiQVy27ONRzk3ToA/_state/: state-1.st
elasticsearch-data/snapshot_cache/: segments_1
elasticsearch-logs/: elasticsearch_server.json  gc.log.00
es-config/: elasticsearch.keystore  jvm.options
reference-stack/: README.md  docker-compose.yml
reference-stack/broken-orders-service/: Dockerfile  app.py
reference-stack/filebeat/: filebeat.yml
scripts/: __init__.py  seed_project_errors_to_elastic.py
server/: app.py
tests/: test_score_boundaries.py
(+66 files in other folders)
